--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@reduxjs/toolkit": "^1.8.6",
     "@zeit/next-less": "^0.0.6",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.0.1",
     "firebase": "^9.14.0",
     "less": "^4.1.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
