--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
