--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-icons": "^1.10.2",
+    "react-bootstrap-typeahead": "^6.0.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
